--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -2882,6 +2882,14 @@ chisel {
     B:emeraldblock.7=true
     B:emeraldblock.8=true
     B:emeraldblock.9=true
+    B:endStone=true
+    B:endStone.1=true
+    B:endStone.2=true
+    B:endStone.3=true
+    B:endStone.4=true
+    B:endStone.5=true
+    B:endStone.6=true
+    B:endStone.7=true
     B:factoryblock=true
     B:factoryblock.1=true
     B:factoryblock.10=true
@@ -3525,6 +3533,14 @@ chisel {
     B:pumpkin7=false
     B:pumpkin8=false
     B:pumpkin9=false
+    B:purpur=true
+    B:purpur.1=true
+    B:purpur.2=true
+    B:purpur.3=true
+    B:purpur.4=true
+    B:purpur.5=true
+    B:purpur.6=true
+    B:purpur.7=true
     B:rebel=true
     B:rebel.1=true
     B:rebel.2=true
@@ -3818,6 +3834,14 @@ chisel {
     B:technical2.3=true
     B:technical3=true
     B:technical3.1=true
+    B:technical4=true
+    B:technical4.1=true
+    B:technical4.2=true
+    B:technical4.3=true
+    B:technical4.4=true
+    B:technical4.5=true
+    B:technical4.6=true
+    B:technical4.7=true
     B:templeblock=true
     B:templeblock.1=true
     B:templeblock.10=true
@@ -7105,6 +7129,11 @@ immersiveengineering {
     B:ore.2=false
     B:ore.3=false
     B:ore.4=false
+    B:stoneDecoration=false
+    B:stoneDecoration.1=false
+    B:stoneDecoration.2=false
+    B:stoneDecoration.3=false
+    B:stoneDecoration.4=false
     B:stoneDevice=false
     B:stoneDevice.1=false
     B:stoneDevice.2=false
@@ -7146,10 +7175,19 @@ immersiveengineering {
 
 
 immersiveintegration {
+    B:aeDecoration=true
+    B:aeDecoration.1=true
     B:extendedPost=false
+    B:industrialCokeOven=false
+    B:itemRobin=false
+    B:meDenseTransformer=false
     B:meDenseWireConnector=false
+    B:meTransformer=false
     B:meWireConnector=false
     B:redstoneWireConnector=false
+    B:steelDecoration=true
+    B:steelDecoration.1=true
+    B:steelDecoration.2=true
     B:steelTrapdoor=false
 }
 
@@ -8674,6 +8712,46 @@ opencomputers {
     B:serverRack=false
     B:switch=false
     B:waypoint=false
+}
+
+
+openmodularturrets {
+    B:baseTierFourBlock=false
+    B:baseTierOneBlock=false
+    B:baseTierThreeBlock=false
+    B:baseTierTwoBlock=false
+    B:baseTierWood=false
+    B:disposeItemTurret=false
+    B:expanderInvTierFive=false
+    B:expanderInvTierFour=false
+    B:expanderInvTierOne=false
+    B:expanderInvTierThree=false
+    B:expanderInvTierTwo=false
+    B:expanderPowerTierFive=false
+    B:expanderPowerTierFour=false
+    B:expanderPowerTierOne=false
+    B:expanderPowerTierThree=false
+    B:expanderPowerTierTwo=false
+    B:fenceTierFive=false
+    B:fenceTierFour=false
+    B:fenceTierOne=false
+    B:fenceTierThree=false
+    B:fenceTierTwo=false
+    B:grenadeTurret=false
+    B:hardWallTierFive=true
+    B:hardWallTierFour=true
+    B:hardWallTierOne=true
+    B:hardWallTierThree=true
+    B:hardWallTierTwo=true
+    B:incendiaryTurret=false
+    B:laserTurret=false
+    B:leverBlock=false
+    B:machineGunTurret=false
+    B:potatoCannonTurret=false
+    B:railGunTurret=false
+    B:relativisticTurret=false
+    B:rocketTurret=false
+    B:teleporterTurret=false
 }
 
 
