--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -77,7 +77,7 @@ general {
     B:references.enabled=true
 
     # Set this to false to disable the Relic System. This only disables the entries, drops and achievements. Old ones that are already in the world will stay.
-    B:relics.enabled=false
+    B:relics.enabled=true
 
     # Set this to false to make the Ring of Odin not apply fire resistance. Mostly for people who use Witchery transformations.
     B:ringOfOdin.fireResist=true
@@ -1631,42 +1631,6 @@ shedding {
     I:chisel.snowman.lexiconDisplaySize=40
     I:chisel.snowman.metadata=0
     I:chisel.snowman.rate=-1
-    S:"critterpet.Fire Beetle.item"=
-    I:"critterpet.Fire Beetle.lexiconDisplaySize"=40
-    I:"critterpet.Fire Beetle.metadata"=0
-    I:"critterpet.Fire Beetle.rate"=-1
-    S:"critterpet.Heatscar Spider.item"=
-    I:"critterpet.Heatscar Spider.lexiconDisplaySize"=40
-    I:"critterpet.Heatscar Spider.metadata"=0
-    I:"critterpet.Heatscar Spider.rate"=-1
-    S:"critterpet.Hedge Spider.item"=
-    I:"critterpet.Hedge Spider.lexiconDisplaySize"=40
-    I:"critterpet.Hedge Spider.metadata"=0
-    I:"critterpet.Hedge Spider.rate"=-1
-    S:"critterpet.King Spider.item"=
-    I:"critterpet.King Spider.lexiconDisplaySize"=40
-    I:"critterpet.King Spider.metadata"=0
-    I:"critterpet.King Spider.rate"=-1
-    S:"critterpet.Maze Slime.item"=
-    I:"critterpet.Maze Slime.lexiconDisplaySize"=40
-    I:"critterpet.Maze Slime.metadata"=0
-    I:"critterpet.Maze Slime.rate"=-1
-    S:"critterpet.Mist Wolf.item"=
-    I:"critterpet.Mist Wolf.lexiconDisplaySize"=40
-    I:"critterpet.Mist Wolf.metadata"=0
-    I:"critterpet.Mist Wolf.rate"=-1
-    S:critterpet.Silverfish.item=
-    I:critterpet.Silverfish.lexiconDisplaySize=40
-    I:critterpet.Silverfish.metadata=0
-    I:critterpet.Silverfish.rate=-1
-    S:"critterpet.Slime Beetle.item"=
-    I:"critterpet.Slime Beetle.lexiconDisplaySize"=40
-    I:"critterpet.Slime Beetle.metadata"=0
-    I:"critterpet.Slime Beetle.rate"=-1
-    S:critterpet.Spider.item=
-    I:critterpet.Spider.lexiconDisplaySize=40
-    I:critterpet.Spider.metadata=0
-    I:critterpet.Spider.rate=-1
 
     # Configuration of Shedding for enderzoo.ConcussionCreeper
     S:enderzoo.ConcussionCreeper.item=
@@ -1985,26 +1949,10 @@ shedding {
     I:menagerie.rat.lexiconDisplaySize=40
     I:menagerie.rat.metadata=0
     I:menagerie.rat.rate=-1
-    S:rogue_android.item=
-    I:rogue_android.lexiconDisplaySize=40
-    I:rogue_android.metadata=0
-    I:rogue_android.rate=-1
-    S:rouge_android.item=
-    I:rouge_android.lexiconDisplaySize=40
-    I:rouge_android.metadata=0
-    I:rouge_android.rate=-1
     S:witherSkeleton.item=
     I:witherSkeleton.lexiconDisplaySize=40
     I:witherSkeleton.metadata=0
     I:witherSkeleton.rate=-1
-    S:yegamolchattels.fakePlayer.item=
-    I:yegamolchattels.fakePlayer.lexiconDisplaySize=40
-    I:yegamolchattels.fakePlayer.metadata=0
-    I:yegamolchattels.fakePlayer.rate=-1
-    S:ygcGhost.item=
-    I:ygcGhost.lexiconDisplaySize=40
-    I:ygcGhost.metadata=0
-    I:ygcGhost.rate=-1
 }
 
 
