--- a/config/IGWMod.cfg
+++ b/config/IGWMod.cfg
@@ -1,9 +1,7 @@
 # Configuration file
 
 general {
-    B:"Automatically scale to GUI scale AUTO in IGW GUI"=true
-    B:"Debug mode"=true
-    B:"Should show tooltip"=false
+    # When enabled, this will notify players when IGW-Mod is not installed even though mods add support.
     B:enable_missing_notification=true
 }
 
