--- a/config/IguanaTinkerTweaks/BlockDefaults.cfg
+++ b/config/IguanaTinkerTweaks/BlockDefaults.cfg
@@ -3633,6 +3633,22 @@ blocks_pickaxe {
     I:"chisel:emerald_block:7"=0
     I:"chisel:emerald_block:8"=0
     I:"chisel:emerald_block:9"=0
+    I:"chisel:end_Stone:0"=0
+    I:"chisel:end_Stone:1"=0
+    I:"chisel:end_Stone:10"=0
+    I:"chisel:end_Stone:11"=0
+    I:"chisel:end_Stone:12"=0
+    I:"chisel:end_Stone:13"=0
+    I:"chisel:end_Stone:14"=0
+    I:"chisel:end_Stone:15"=0
+    I:"chisel:end_Stone:2"=0
+    I:"chisel:end_Stone:3"=0
+    I:"chisel:end_Stone:4"=0
+    I:"chisel:end_Stone:5"=0
+    I:"chisel:end_Stone:6"=0
+    I:"chisel:end_Stone:7"=0
+    I:"chisel:end_Stone:8"=0
+    I:"chisel:end_Stone:9"=0
     I:"chisel:factoryblock2:0"=0
     I:"chisel:factoryblock2:1"=0
     I:"chisel:factoryblock2:10"=0
@@ -4161,6 +4177,22 @@ blocks_pickaxe {
     I:"chisel:obsidian:7"=0
     I:"chisel:obsidian:8"=0
     I:"chisel:obsidian:9"=0
+    I:"chisel:purpur:0"=0
+    I:"chisel:purpur:1"=0
+    I:"chisel:purpur:10"=0
+    I:"chisel:purpur:11"=0
+    I:"chisel:purpur:12"=0
+    I:"chisel:purpur:13"=0
+    I:"chisel:purpur:14"=0
+    I:"chisel:purpur:15"=0
+    I:"chisel:purpur:2"=0
+    I:"chisel:purpur:3"=0
+    I:"chisel:purpur:4"=0
+    I:"chisel:purpur:5"=0
+    I:"chisel:purpur:6"=0
+    I:"chisel:purpur:7"=0
+    I:"chisel:purpur:8"=0
+    I:"chisel:purpur:9"=0
     I:"chisel:rebel:0"=0
     I:"chisel:rebel:1"=0
     I:"chisel:rebel:10"=0
@@ -4321,6 +4353,22 @@ blocks_pickaxe {
     I:"chisel:technical3:7"=0
     I:"chisel:technical3:8"=0
     I:"chisel:technical3:9"=0
+    I:"chisel:technical4:0"=0
+    I:"chisel:technical4:1"=0
+    I:"chisel:technical4:10"=0
+    I:"chisel:technical4:11"=0
+    I:"chisel:technical4:12"=0
+    I:"chisel:technical4:13"=0
+    I:"chisel:technical4:14"=0
+    I:"chisel:technical4:15"=0
+    I:"chisel:technical4:2"=0
+    I:"chisel:technical4:3"=0
+    I:"chisel:technical4:4"=0
+    I:"chisel:technical4:5"=0
+    I:"chisel:technical4:6"=0
+    I:"chisel:technical4:7"=0
+    I:"chisel:technical4:8"=0
+    I:"chisel:technical4:9"=0
     I:"chisel:technical:0"=0
     I:"chisel:technical:1"=0
     I:"chisel:technical:10"=0
@@ -5107,6 +5155,166 @@ blocks_pickaxe {
     I:"minecraft:stone_slab:7"=0
     I:"minecraft:stone_slab:8"=0
     I:"minecraft:stone_slab:9"=0
+    I:"openmodularturrets:fenceTierFive:0"=3
+    I:"openmodularturrets:fenceTierFive:1"=3
+    I:"openmodularturrets:fenceTierFive:10"=3
+    I:"openmodularturrets:fenceTierFive:11"=3
+    I:"openmodularturrets:fenceTierFive:12"=3
+    I:"openmodularturrets:fenceTierFive:13"=3
+    I:"openmodularturrets:fenceTierFive:14"=3
+    I:"openmodularturrets:fenceTierFive:15"=3
+    I:"openmodularturrets:fenceTierFive:2"=3
+    I:"openmodularturrets:fenceTierFive:3"=3
+    I:"openmodularturrets:fenceTierFive:4"=3
+    I:"openmodularturrets:fenceTierFive:5"=3
+    I:"openmodularturrets:fenceTierFive:6"=3
+    I:"openmodularturrets:fenceTierFive:7"=3
+    I:"openmodularturrets:fenceTierFive:8"=3
+    I:"openmodularturrets:fenceTierFive:9"=3
+    I:"openmodularturrets:fenceTierFour:0"=3
+    I:"openmodularturrets:fenceTierFour:1"=3
+    I:"openmodularturrets:fenceTierFour:10"=3
+    I:"openmodularturrets:fenceTierFour:11"=3
+    I:"openmodularturrets:fenceTierFour:12"=3
+    I:"openmodularturrets:fenceTierFour:13"=3
+    I:"openmodularturrets:fenceTierFour:14"=3
+    I:"openmodularturrets:fenceTierFour:15"=3
+    I:"openmodularturrets:fenceTierFour:2"=3
+    I:"openmodularturrets:fenceTierFour:3"=3
+    I:"openmodularturrets:fenceTierFour:4"=3
+    I:"openmodularturrets:fenceTierFour:5"=3
+    I:"openmodularturrets:fenceTierFour:6"=3
+    I:"openmodularturrets:fenceTierFour:7"=3
+    I:"openmodularturrets:fenceTierFour:8"=3
+    I:"openmodularturrets:fenceTierFour:9"=3
+    I:"openmodularturrets:fenceTierOne:0"=3
+    I:"openmodularturrets:fenceTierOne:1"=3
+    I:"openmodularturrets:fenceTierOne:10"=3
+    I:"openmodularturrets:fenceTierOne:11"=3
+    I:"openmodularturrets:fenceTierOne:12"=3
+    I:"openmodularturrets:fenceTierOne:13"=3
+    I:"openmodularturrets:fenceTierOne:14"=3
+    I:"openmodularturrets:fenceTierOne:15"=3
+    I:"openmodularturrets:fenceTierOne:2"=3
+    I:"openmodularturrets:fenceTierOne:3"=3
+    I:"openmodularturrets:fenceTierOne:4"=3
+    I:"openmodularturrets:fenceTierOne:5"=3
+    I:"openmodularturrets:fenceTierOne:6"=3
+    I:"openmodularturrets:fenceTierOne:7"=3
+    I:"openmodularturrets:fenceTierOne:8"=3
+    I:"openmodularturrets:fenceTierOne:9"=3
+    I:"openmodularturrets:fenceTierThree:0"=3
+    I:"openmodularturrets:fenceTierThree:1"=3
+    I:"openmodularturrets:fenceTierThree:10"=3
+    I:"openmodularturrets:fenceTierThree:11"=3
+    I:"openmodularturrets:fenceTierThree:12"=3
+    I:"openmodularturrets:fenceTierThree:13"=3
+    I:"openmodularturrets:fenceTierThree:14"=3
+    I:"openmodularturrets:fenceTierThree:15"=3
+    I:"openmodularturrets:fenceTierThree:2"=3
+    I:"openmodularturrets:fenceTierThree:3"=3
+    I:"openmodularturrets:fenceTierThree:4"=3
+    I:"openmodularturrets:fenceTierThree:5"=3
+    I:"openmodularturrets:fenceTierThree:6"=3
+    I:"openmodularturrets:fenceTierThree:7"=3
+    I:"openmodularturrets:fenceTierThree:8"=3
+    I:"openmodularturrets:fenceTierThree:9"=3
+    I:"openmodularturrets:fenceTierTwo:0"=3
+    I:"openmodularturrets:fenceTierTwo:1"=3
+    I:"openmodularturrets:fenceTierTwo:10"=3
+    I:"openmodularturrets:fenceTierTwo:11"=3
+    I:"openmodularturrets:fenceTierTwo:12"=3
+    I:"openmodularturrets:fenceTierTwo:13"=3
+    I:"openmodularturrets:fenceTierTwo:14"=3
+    I:"openmodularturrets:fenceTierTwo:15"=3
+    I:"openmodularturrets:fenceTierTwo:2"=3
+    I:"openmodularturrets:fenceTierTwo:3"=3
+    I:"openmodularturrets:fenceTierTwo:4"=3
+    I:"openmodularturrets:fenceTierTwo:5"=3
+    I:"openmodularturrets:fenceTierTwo:6"=3
+    I:"openmodularturrets:fenceTierTwo:7"=3
+    I:"openmodularturrets:fenceTierTwo:8"=3
+    I:"openmodularturrets:fenceTierTwo:9"=3
+    I:"openmodularturrets:hardWallTierFive:0"=3
+    I:"openmodularturrets:hardWallTierFive:1"=3
+    I:"openmodularturrets:hardWallTierFive:10"=3
+    I:"openmodularturrets:hardWallTierFive:11"=3
+    I:"openmodularturrets:hardWallTierFive:12"=3
+    I:"openmodularturrets:hardWallTierFive:13"=3
+    I:"openmodularturrets:hardWallTierFive:14"=3
+    I:"openmodularturrets:hardWallTierFive:15"=3
+    I:"openmodularturrets:hardWallTierFive:2"=3
+    I:"openmodularturrets:hardWallTierFive:3"=3
+    I:"openmodularturrets:hardWallTierFive:4"=3
+    I:"openmodularturrets:hardWallTierFive:5"=3
+    I:"openmodularturrets:hardWallTierFive:6"=3
+    I:"openmodularturrets:hardWallTierFive:7"=3
+    I:"openmodularturrets:hardWallTierFive:8"=3
+    I:"openmodularturrets:hardWallTierFive:9"=3
+    I:"openmodularturrets:hardWallTierFour:0"=3
+    I:"openmodularturrets:hardWallTierFour:1"=3
+    I:"openmodularturrets:hardWallTierFour:10"=3
+    I:"openmodularturrets:hardWallTierFour:11"=3
+    I:"openmodularturrets:hardWallTierFour:12"=3
+    I:"openmodularturrets:hardWallTierFour:13"=3
+    I:"openmodularturrets:hardWallTierFour:14"=3
+    I:"openmodularturrets:hardWallTierFour:15"=3
+    I:"openmodularturrets:hardWallTierFour:2"=3
+    I:"openmodularturrets:hardWallTierFour:3"=3
+    I:"openmodularturrets:hardWallTierFour:4"=3
+    I:"openmodularturrets:hardWallTierFour:5"=3
+    I:"openmodularturrets:hardWallTierFour:6"=3
+    I:"openmodularturrets:hardWallTierFour:7"=3
+    I:"openmodularturrets:hardWallTierFour:8"=3
+    I:"openmodularturrets:hardWallTierFour:9"=3
+    I:"openmodularturrets:hardWallTierOne:0"=3
+    I:"openmodularturrets:hardWallTierOne:1"=3
+    I:"openmodularturrets:hardWallTierOne:10"=3
+    I:"openmodularturrets:hardWallTierOne:11"=3
+    I:"openmodularturrets:hardWallTierOne:12"=3
+    I:"openmodularturrets:hardWallTierOne:13"=3
+    I:"openmodularturrets:hardWallTierOne:14"=3
+    I:"openmodularturrets:hardWallTierOne:15"=3
+    I:"openmodularturrets:hardWallTierOne:2"=3
+    I:"openmodularturrets:hardWallTierOne:3"=3
+    I:"openmodularturrets:hardWallTierOne:4"=3
+    I:"openmodularturrets:hardWallTierOne:5"=3
+    I:"openmodularturrets:hardWallTierOne:6"=3
+    I:"openmodularturrets:hardWallTierOne:7"=3
+    I:"openmodularturrets:hardWallTierOne:8"=3
+    I:"openmodularturrets:hardWallTierOne:9"=3
+    I:"openmodularturrets:hardWallTierThree:0"=3
+    I:"openmodularturrets:hardWallTierThree:1"=3
+    I:"openmodularturrets:hardWallTierThree:10"=3
+    I:"openmodularturrets:hardWallTierThree:11"=3
+    I:"openmodularturrets:hardWallTierThree:12"=3
+    I:"openmodularturrets:hardWallTierThree:13"=3
+    I:"openmodularturrets:hardWallTierThree:14"=3
+    I:"openmodularturrets:hardWallTierThree:15"=3
+    I:"openmodularturrets:hardWallTierThree:2"=3
+    I:"openmodularturrets:hardWallTierThree:3"=3
+    I:"openmodularturrets:hardWallTierThree:4"=3
+    I:"openmodularturrets:hardWallTierThree:5"=3
+    I:"openmodularturrets:hardWallTierThree:6"=3
+    I:"openmodularturrets:hardWallTierThree:7"=3
+    I:"openmodularturrets:hardWallTierThree:8"=3
+    I:"openmodularturrets:hardWallTierThree:9"=3
+    I:"openmodularturrets:hardWallTierTwo:0"=3
+    I:"openmodularturrets:hardWallTierTwo:1"=3
+    I:"openmodularturrets:hardWallTierTwo:10"=3
+    I:"openmodularturrets:hardWallTierTwo:11"=3
+    I:"openmodularturrets:hardWallTierTwo:12"=3
+    I:"openmodularturrets:hardWallTierTwo:13"=3
+    I:"openmodularturrets:hardWallTierTwo:14"=3
+    I:"openmodularturrets:hardWallTierTwo:15"=3
+    I:"openmodularturrets:hardWallTierTwo:2"=3
+    I:"openmodularturrets:hardWallTierTwo:3"=3
+    I:"openmodularturrets:hardWallTierTwo:4"=3
+    I:"openmodularturrets:hardWallTierTwo:5"=3
+    I:"openmodularturrets:hardWallTierTwo:6"=3
+    I:"openmodularturrets:hardWallTierTwo:7"=3
+    I:"openmodularturrets:hardWallTierTwo:8"=3
+    I:"openmodularturrets:hardWallTierTwo:9"=3
     I:"streams:river/ice/-1/-2:0"=0
     I:"streams:river/ice/-1/-2:1"=0
     I:"streams:river/ice/-1/-2:10"=0
