--- a/config/Mekanism.cfg
+++ b/config/Mekanism.cfg
@@ -22,7 +22,7 @@ general {
     I:ArmoredJepackDamageMax=115
     D:ArmoredJetpackDamageRatio=0.8
     B:BlacklistIC2Power=true
-    B:BlacklistRFPower=true
+    B:BlacklistRFPower=false
     I:ClientUpdateDelay=10
     B:ControlCircuitOreDict=true
     I:CopperPerChunk=0
@@ -34,13 +34,13 @@ general {
     B:EnableAmbientLighting=true
     B:EnableWorldRegeneration=false
     D:EnergyPerRedstone=10000.0
-    S:EnergyType=J
+    S:EnergyType=RF
     I:EthyleneBurnTime=40
 
     # Determines Electrolytic Separator usage
     D:HydrogenEnergyDensity=200.0
     D:JoulesToEU=10.0
-    D:JoulesToRF=0
+    D:JoulesToRF=7.5
     I:LaserDiggingEnergy=100000
     I:LaserRange=64
     B:LogPackets=false
@@ -53,13 +53,13 @@ general {
     B:OpsBypassRestrictions=true
     I:OsmiumPerChunk=0
     B:PrefilledPortableTanks=false
-    D:RFToJoules=0
+    D:RFToJoules=0.15
     I:SaltPerChunk=2
     D:SolarEvaporationSpeed=1.0
     B:SpawnBabySkeletons=true
     S:"Temperature Units"=K
     I:TinPerChunk=0
-    B:UpdateNotifications=true
+    B:UpdateNotifications=false
     I:UpgradeModifier=10
     I:VoicePort=36123
     B:VoiceServerEnabled=false
