--- a/config/headcrumbs.cfg
+++ b/config/headcrumbs.cfg
@@ -283,6 +283,7 @@ heads {
         Fluffycloud42
         Demosthenexx
         brokescience
+		AngieTheDemoness
      >
     S:technic <
         GenPage
