--- a/config/Galacticraft/core.conf
+++ b/config/Galacticraft/core.conf
@@ -77,10 +77,10 @@ general {
     B:"Disable Cheese Ore Gen on Moon"=false
 
     # Disable Tin Ore Gen on Moon.
-    B:"Disable Tin Ore Gen on Moon"=true
+    B:"Disable Tin Ore Gen on Moon"=false
 
     # Disable Tin Ore Gen on Moon.
-    B:"Disable Copper Ore Gen on Moon"=true
+    B:"Disable Copper Ore Gen on Moon"=false
 
     # If true, moon villages will not generate.
     B:"Disable Moon Village Gen"=false
@@ -89,14 +89,28 @@ general {
     B:"Generate all other mods features on planets"=false
 
     # If generate other mods features is disabled as recommended, this setting can whitelist CoFHCore custom worldgen on planets.
-    B:"Whitelist CoFHCore worldgen to generate its ores and lakes on planets"=true
+    B:"Whitelist CoFHCore worldgen to generate its ores and lakes on planets"=false
 
     # If ThaumCraft is installed, ThaumCraft wild nodes can generate on the Moon and planets.
     B:"Generate ThaumCraft wild nodes on planetary surfaces"=true
 
     # Enter IDs of other mods' ores here for Galacticraft to generate them on the Moon and other planets. Format is BlockName or BlockName:metadata. Use optional parameters at end of each line: /RARE /UNCOMMON or /COMMON for rarity in a chunk; /DEEP /SHALLOW or /BOTH for height; /SINGLE /STANDARD or /LARGE for clump size; /XTRARANDOM for ores sometimes there sometimes not at all.  /ONLYMOON or /ONLYMARS if wanted on one planet only.  If nothing specified, defaults are /COMMON, /BOTH and /STANDARD.  Repeat lines to generate a huge quantity of ores.
     S:"Other mods ores for GC to generate on the Moon and planets" <
-        magicalcrops:magicalcrops_MinicioOre /UNCOMMON /DEEP /STANDARD /ONLYMARS
+		ReactorCraft:reactorcraft_block_ore:1 /UNCOMMON /DEEP /STANDARD 
+		ReactorCraft:reactorcraft_block_ore:2 /UNCOMMON /DEEP /STANDARD 
+		ReactorCraft:reactorcraft_block_ore:3 /UNCOMMON /DEEP /STANDARD 
+		ReactorCraft:reactorcraft_block_ore:4 /UNCOMMON /DEEP /STANDARD 
+		ReactorCraft:reactorcraft_block_ore:7 /UNCOMMON /BOTH /LARGE
+		ReactorCraft:reactorcraft_block_ore:8 /COMMON /BOTH /LARGE
+		ReactorCraft:reactorcraft_block_ore:8 /COMMON /BOTH /LARGE
+		ReactorCraft:reactorcraft_block_fluoriteore:0 /COMMON /BOTH /STANDARD
+		ReactorCraft:reactorcraft_block_fluoriteore:1 /COMMON /BOTH /STANDARD
+		ReactorCraft:reactorcraft_block_fluoriteore:2 /COMMON /BOTH /STANDARD
+		ReactorCraft:reactorcraft_block_fluoriteore:3 /COMMON /BOTH /STANDARD
+		ReactorCraft:reactorcraft_block_fluoriteore:4 /COMMON /BOTH /STANDARD
+		ReactorCraft:reactorcraft_block_fluoriteore:5 /COMMON /BOTH /STANDARD
+		ReactorCraft:reactorcraft_block_fluoriteore:6 /COMMON /BOTH /STANDARD
+		ReactorCraft:reactorcraft_block_fluoriteore:7 /COMMON /BOTH /STANDARD
      >
 
     # If this is enabled, debug messages will appear in the console. This is useful for finding bugs in the mod.
