--- a/config/wailaplugins.cfg
+++ b/config/wailaplugins.cfg
@@ -13,46 +13,24 @@ blood_magic {
     # 0 - No sigil needed at all.
     # 1 - Need sigil in your inventory
     # 2 - Need sigil in your hand.
-    # [default: 1]
+    # [range: 0 ~ 2, default: 1]
     I:sigilRequirement=1
 }
 
 
 plugins {
-    # Should the plugin for the mod with modid 'AWWayofTime' be loaded
     B:AWWayofTime=true
-
-    # Should the plugin for the mod with modid 'ExtraUtilities' be loaded
     B:ExtraUtilities=true
-
-    # Should the plugin for the mod with modid 'Forestry' be loaded
     B:Forestry=true
-
-    # Should the plugin for the mod with modid 'Forge' be loaded
     B:Forge=true
-
-    # Should the plugin for the mod with modid 'Mekanism' be loaded
     B:Mekanism=false
-
-    # Should the plugin for the mod with modid 'MineFactoryReloaded' be loaded
     B:MineFactoryReloaded=true
-
-    # Should the plugin for the mod with modid 'Railcraft' be loaded
     B:Railcraft=true
-
-    # Should the plugin for the mod with modid 'RedLogic' be loaded
     B:RedLogic=false
-
-    # Should the plugin for the mod with modid 'Steamcraft' be loaded
+    B:ResourcefulCrops=true
     B:Steamcraft=false
-
-    # Should the plugin for the mod with modid 'ThermalExpansion' be loaded
     B:ThermalExpansion=true
-
-    # Should the plugin for the mod with modid 'harvestcraft' be loaded
     B:harvestcraft=false
-
-    # Should the plugin for the mod with modid 'magicalcrops' be loaded
     B:magicalcrops=false
 }
 
