--- a/config/AdvancedSystemsManager/AdvancedSystemsManager.cfg
+++ b/config/AdvancedSystemsManager/AdvancedSystemsManager.cfg
@@ -12,7 +12,7 @@ default_manager_settings {
     B:autoSide=true
     B:commandTypes=false
     B:enlargeInterfaces=false
-    B:largeOpenHitBox=true
+    B:largeOpenHitBox=false
     B:largeOpenHitBoxMenu=true
     B:middleClick=true
     B:priorityMoveFirst=false
