--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -7134,6 +7134,7 @@ immersiveengineering {
     B:stoneDecoration.2=false
     B:stoneDecoration.3=false
     B:stoneDecoration.4=false
+    B:stoneDecoration.5=false
     B:stoneDevice=false
     B:stoneDevice.1=false
     B:stoneDevice.2=false
