--- a/config/SpecialAI.cfg
+++ b/config/SpecialAI.cfg
@@ -11,7 +11,7 @@ _general {
     B:avoid_explosions=true
 
     # (0.0-INFINITY) The block breaking speed multiplier for mobs, relative to the player's block breaking speed. Default is 50% speed.
-    D:break_speed=0.5
+    D:break_speed=0.25
 
     # (True/false) If true, all mobs will call for help from nearby mobs of the same type when struck. Default is true.
     B:call_for_help=true
@@ -81,7 +81,7 @@ passive_griefing {
     D:grief_range=3.5
 
     # (Integer > 0) The global maximum number of solid blocks to scan per tick when mobs search for a block to grief. Default is 256 blocks per tick.
-    I:grief_scan_cap=256
+    I:grief_scan_cap=64
 
     # (True/false) If true, the mod will print a message to your console when more than "grief_scan_max" entities are searching for blocks to grief. Default is false.
     B:grief_scan_cap_info=false
@@ -96,10 +96,10 @@ passive_griefing {
     B:leave_drops=true
 
     # (True/false) If true, creepers will be very mad about not having arms to break things with, and resort to what they know best... Default is true.
-    B:mad_creepers=true
+    B:mad_creepers=false
 
     # (Entity list) List of mobs that gain passive griefing AI (note that the entity must have pathfinding AI enabled). Defaults to any kind of zombie or creeper.
-    S:mob_list=Zombie,Creeper
+    S:mob_list=Zombie
 
     # (True/false) If true, mobs will only target blocks they have the tools to harvest. Default is false.
     B:requires_tools=false
@@ -109,7 +109,7 @@ passive_griefing {
 
     # (Block list) Specific blocks that will be targeted by mobs. Defaults to farmland, beds, crafting tables, wooden doors, wooden trapdoors, fence gates, ladders, and cakes.
     # This is a comma-separated list. You may specify metadata (0-15) with a space after the id, followed by the metadata. For example, "cake" will cause mobs to target all cakes, while "cake 0" will cause mobs to only target cakes that have not been partially eaten.
-    S:target_blocks=farmland,bed,crafting_table,wooden_door,trapdoor,fence_gate,ladder,cake
+    S:target_blocks=crafting_table,wooden_door,trapdoor,fence_gate,ladder,cake,bamboo,cobblestone
 }
 
 
