--- a/config/ImmersiveEngineering.cfg
+++ b/config/ImmersiveEngineering.cfg
@@ -233,6 +233,9 @@ tools {
     # The amount of base damage a Homing Cartridge inflicts
     D:BulletDamage-Homing=8.0
 
+    # The amount of damage a silver bullet inflicts
+    D:BulletDamage-Silver=7.0
+
     # The amount of base damage a Wolfpack Cartridge inflicts
     D:BulletDamage-Wolfpack=6.0
 
