--- a/config/fastcraft.ini
+++ b/config/fastcraft.ini
@@ -1,5 +1,5 @@
 ; FastCraft config
-; created Aug 20, 2015 6:49:06 PM
+; created Aug 29, 2015 10:55:46 AM
 ;---
 
 ; Settings purely affecting performance, but not gameplay.
