--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -1960,7 +1960,9 @@ botania {
     B:altar.6=false
     B:altar.7=false
     B:altar.8=false
+    B:bellows=false
     B:bifrost=false
+    B:bifrostPerm=false
     B:biomeStoneA=true
     B:biomeStoneA.1=true
     B:biomeStoneA.10=true
@@ -2091,6 +2093,7 @@ botania {
     B:buriedPetals.7=false
     B:buriedPetals.8=false
     B:buriedPetals.9=false
+    B:cacophoniumBlock=false
     B:cocoon=false
     B:conjurationCatalyst=true
     B:corporeaCrystalCube=false
@@ -4828,6 +4831,8 @@ extrautilities {
     B:budoff=true
     B:budoff.3=false
     B:chandelier=false
+    B:chestFull=false
+    B:chestMini=false
     B:cobblestonecompressed=true
     B:cobblestonecompressed.1=true
     B:cobblestonecompressed.10=true
@@ -5748,6 +5753,8 @@ gardentrees {
     B:thinlog.1018=false
     B:thinlog.1019=false
     B:thinlog.1020=false
+    B:thinlog.1021=false
+    B:thinlog.1022=false
     B:thinlog.1088=false
     B:thinlog.1094=false
     B:thinlog.1098=false
@@ -5845,6 +5852,8 @@ gardentrees {
     B:thinlog.13306=false
     B:thinlog.13307=false
     B:thinlog.13308=false
+    B:thinlog.13309=false
+    B:thinlog.13310=false
     B:thinlog.13376=false
     B:thinlog.13382=false
     B:thinlog.13386=false
@@ -6001,6 +6010,8 @@ gardentrees {
     B:thinlog.5114=false
     B:thinlog.5115=false
     B:thinlog.5116=false
+    B:thinlog.5117=false
+    B:thinlog.5118=false
     B:thinlog.5184=false
     B:thinlog.5190=false
     B:thinlog.5194=false
@@ -6154,6 +6165,8 @@ gardentrees {
     B:thinlog.9210=false
     B:thinlog.9211=false
     B:thinlog.9212=false
+    B:thinlog.9213=false
+    B:thinlog.9214=false
     B:thinlog.9280=false
     B:thinlog.9286=false
     B:thinlog.9290=false
@@ -6221,6 +6234,8 @@ gardentrees {
     B:thinlogfence.1018=false
     B:thinlogfence.1019=false
     B:thinlogfence.1020=false
+    B:thinlogfence.1021=false
+    B:thinlogfence.1022=false
     B:thinlogfence.1088=false
     B:thinlogfence.1094=false
     B:thinlogfence.1098=false
@@ -6318,6 +6333,8 @@ gardentrees {
     B:thinlogfence.13306=false
     B:thinlogfence.13307=false
     B:thinlogfence.13308=false
+    B:thinlogfence.13309=false
+    B:thinlogfence.13310=false
     B:thinlogfence.13376=false
     B:thinlogfence.13382=false
     B:thinlogfence.13386=false
@@ -6474,6 +6491,8 @@ gardentrees {
     B:thinlogfence.5114=false
     B:thinlogfence.5115=false
     B:thinlogfence.5116=false
+    B:thinlogfence.5117=false
+    B:thinlogfence.5118=false
     B:thinlogfence.5184=false
     B:thinlogfence.5190=false
     B:thinlogfence.5194=false
@@ -6627,6 +6646,8 @@ gardentrees {
     B:thinlogfence.9210=false
     B:thinlogfence.9211=false
     B:thinlogfence.9212=false
+    B:thinlogfence.9213=false
+    B:thinlogfence.9214=false
     B:thinlogfence.9280=false
     B:thinlogfence.9286=false
     B:thinlogfence.9290=false
