--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -4,6 +4,9 @@ general {
     # Set this to false to disable the 1.8 Stones available as mana alchemy recipes. This only disables the recipes and entries. Old ones that are already in the world will stay.
     B:18stones.enabled=true
 
+    # Set this to false to disable the 1.9 Ender features available as recipes. This only disables the recipes and entries. Old ones that are already in the world will stay.
+    B:19enderStuff.enabled=true
+
     # Set this to false to disable rendering of baubles in the player.
     B:baubleRender.enabled=true
 
@@ -64,7 +67,7 @@ general {
     # Set this to true if you are the chosen one. For lovers of glitch art and just general mad people.
     B:matrixMode.enabled=false
 
-    # Set to anything other than -1 for passive generation flowers (dayblooms, nightshades, hydroangeas) to die after a specific amount of ticks. 24000 is 2 Minecraft days, that's a recomended value.
+    # Set to anything other than -1 for passive generation flowers (dayblooms, nightshades, hydroangeas) to die after a specific amount of ticks. 48000 is 2 Minecraft days, that's a recomended value.
     I:passiveWither.time=24000
 
     # Set this to true to set the power system's particles to be a lot more subtle. Good for low-end systems, if the particles are causing lag.
