--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -43,7 +43,7 @@
     I:"Rainbow Forest Animal Density"=6
     I:"Rainbow Forest Biome Weight"=10
     D:"Rainbow Leaf Gold Apple Drop Percentage"=0.25
-    B:"Rainbow Trees Spread Rainbow Forests"=true
+    B:"Rainbow Trees Spread Rainbow Forests"=false
     B:"Reload Handbook Data on Open"=false
     B:Retrogeneration=false
     B:"Run Worldgen in Superflat Worlds"=false
