--- a/config/fastcraft.ini
+++ b/config/fastcraft.ini
@@ -1,5 +1,5 @@
 ; FastCraft config
-; created Aug 29, 2015 10:55:46 AM
+; created Aug 30, 2015 4:11:02 PM
 ;---
 
 ; Settings purely affecting performance, but not gameplay.
