--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -3991,6 +3991,7 @@ chisel {
 
 chromaticraft {
     B:chromaticraftblockchroma=false
+    B:chromaticraftblockcoloraltar=false
     B:chromaticraftblockcolorlock=false
     B:chromaticraftblockcrystal=false
     B:chromaticraftblockdecay=false
@@ -3998,6 +3999,7 @@ chromaticraft {
     B:chromaticraftblockdimdata=false
     B:chromaticraftblockdimgen=false
     B:chromaticraftblockdimgentile=false
+    B:chromaticraftblockdoor=false
     B:chromaticraftblockdye=true
     B:chromaticraftblockdyegrass=false
     B:chromaticraftblockdyeleaf=false
@@ -4031,6 +4033,8 @@ chromaticraft {
     B:chromaticraftblocklockfreeze=false
     B:chromaticraftblocklockkey=false
     B:chromaticraftblocklootchest=false
+    B:chromaticraftblockmusicmemory=false
+    B:chromaticraftblockmusictrigger=true
     B:chromaticraftblockpath=true
     B:chromaticraftblockplant=false
     B:chromaticraftblockportal=false
@@ -4043,9 +4047,13 @@ chromaticraft {
     B:chromaticraftblockrelay=false
     B:chromaticraftblockrift=false
     B:chromaticraftblockrune=true
+    B:chromaticraftblockshiftkey=false
+    B:chromaticraftblockshiftlock=false
+    B:chromaticraftblockspecialshield=false
     B:chromaticraftblockstructshield=false
     B:chromaticraftblocksuper=false
     B:chromaticraftblocktank=false
+    B:chromaticraftblockteleport=false
     B:chromaticraftblocktieredore=true
     B:chromaticraftblocktieredore.1=true
     B:chromaticraftblocktieredore.10=true
