--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -36,6 +36,7 @@
     B:"Lamp Noises"=true
     B:"Liquid Ender Effect"=true
     I:"Lumen Relay Range"=16
+    B:"Make Pylon pathfinding attempt shortest path - can be intensive"=true
     B:"Make ThaumCraft integration require ThaumCraft progression"=true
     I:"Max Accelerator Lag in NanoSeconds"=1000000
     B:"Nether Crystals"=true
@@ -51,6 +52,7 @@
     B:"Use reduced-size Pylon Aura image; only enable this if you get a full-screen color washout"=false
     B:"Use vanilla keybind system for ability selection GUI"=false
     I:"Vanilla Dye Drop Percentage"=100
+    B:"World Rifts Chunkload"=false
 }
 
 
