--- a/config/Reika/ReactorCraft.cfg
+++ b/config/Reika/ReactorCraft.cfg
@@ -31,7 +31,9 @@
 "control setup" {
     B:"Allow Fluorite Recoloring"=false
     B:"Fission Cores Chunkload When Active"=true
+    B:"Generate Cadmium Ore Even If Other Mods Do"=false
     B:"Generate Calcite Ore Even If Other Mods Do"=false
+    B:"Generate Indium Ore Even If Other Mods Do"=false
     B:"Generate Magnetite Ore Even If Other Mods Do"=false
     B:"Generate Silver Ore Even If Other Mods Do"=false
     I:"Ore Density Percentage"=0
