--- a/config/IguanaTinkerTweaks/MaterialDefaults.cfg
+++ b/config/IguanaTinkerTweaks/MaterialDefaults.cfg
@@ -362,6 +362,18 @@ materials {
         D:xpAmount=1.0
     }
 
+    bedrock {
+        I:attack=5
+        S:color=black
+        I:durability=800000
+        D:handleModifier=3.0
+        I:harvestLevel=802
+        I:miningSpeed=1500
+        I:reinforced=10
+        D:shoddy=0.0
+        D:xpAmount=1.0
+    }
+
 }
 
 
