--- a/config/Reika/DragonAPI.cfg
+++ b/config/Reika/DragonAPI.cfg
@@ -8,6 +8,7 @@
     B:"Disable Renders For Debug"=false
     B:"Force Gregtech Ore Compatibility"=true
     B:"Increase sound channel count"=true
+    B:"Log Loading Info To Separate File"=false
     B:"Log Sync Packet CME Avoidance"=true
     B:"Log errors to chat"=true
     B:"Only show update notice to Ops or SSP"=true
