--- a/config/Reika/RotaryCraft.cfg
+++ b/config/Reika/RotaryCraft.cfg
@@ -53,9 +53,11 @@
     B:"Allow EMP"=true
     B:"Allow Frames to move Machines (May cause corruption)"=false
     B:"Allow Gravel Gun PvP"=true
+    B:"Allow Nonstandard Recipe Modifications"=false
     B:"Allow RC steel to be used in other mods"=false
     B:"Allow TNT Cannon"=true
     B:"Allow special bedrock tool abilities in automation"=true
+    B:"AutoCrafter Lag Profiling And Compensation"=true
     I:"Bait Box Range"=128
     B:"Block Damage from Destructive Machines"=true
     I:"Block Ram Range"=512
@@ -67,6 +69,7 @@
     I:"Chunk Loader Max Radius in Chunks"=8
     B:"Color Blind Mode"=false
     B:"Conservative Jetpack Firing"=true
+    S:"Core Recipe Editing"=X
     B:"Crafting Table can Make Machines"=false
     I:"Difficulty Control"=2
     B:"Direct Block Damage from Machine Failures"=true
@@ -121,6 +124,7 @@
     B:"Spawn with RC Handbook"=true
     I:"Spawner Mob Limit"=128
     I:"Sprinkler Particle Density"=4
+    B:"Strong Recipe Editing"=false
     B:"Terraformer Block Editing"=true
     B:"Tools Clear Chat"=false
     B:"Turrets can target players"=false
@@ -129,6 +133,7 @@
 
 
 "other ids" {
+    I:"Bedrock Tool Material ID"=80
     I:"Freeze Potion ID"=35
 }
 
