--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -5208,6 +5208,16 @@ extrautilities {
 }
 
 
+flansmod {
+    B:armorBoxmwArmour=true
+    B:flansWorkbench=true
+    B:gunBoxmodern=true
+    B:teamsSpawner=false
+    B:teamsSpawner.1=false
+    B:teamsSpawner.2=false
+}
+
+
 flatsigns {
     B:blockFlatSign=false
 }
@@ -5763,6 +5773,7 @@ gardentrees {
     B:thinlog.1020=false
     B:thinlog.1021=false
     B:thinlog.1022=false
+    B:thinlog.1023=false
     B:thinlog.1088=false
     B:thinlog.1094=false
     B:thinlog.1098=false
@@ -5862,6 +5873,7 @@ gardentrees {
     B:thinlog.13308=false
     B:thinlog.13309=false
     B:thinlog.13310=false
+    B:thinlog.13311=false
     B:thinlog.13376=false
     B:thinlog.13382=false
     B:thinlog.13386=false
@@ -6020,6 +6032,7 @@ gardentrees {
     B:thinlog.5116=false
     B:thinlog.5117=false
     B:thinlog.5118=false
+    B:thinlog.5119=false
     B:thinlog.5184=false
     B:thinlog.5190=false
     B:thinlog.5194=false
@@ -6175,6 +6188,7 @@ gardentrees {
     B:thinlog.9212=false
     B:thinlog.9213=false
     B:thinlog.9214=false
+    B:thinlog.9215=false
     B:thinlog.9280=false
     B:thinlog.9286=false
     B:thinlog.9290=false
@@ -6244,6 +6258,7 @@ gardentrees {
     B:thinlogfence.1020=false
     B:thinlogfence.1021=false
     B:thinlogfence.1022=false
+    B:thinlogfence.1023=false
     B:thinlogfence.1088=false
     B:thinlogfence.1094=false
     B:thinlogfence.1098=false
@@ -6343,6 +6358,7 @@ gardentrees {
     B:thinlogfence.13308=false
     B:thinlogfence.13309=false
     B:thinlogfence.13310=false
+    B:thinlogfence.13311=false
     B:thinlogfence.13376=false
     B:thinlogfence.13382=false
     B:thinlogfence.13386=false
@@ -6501,6 +6517,7 @@ gardentrees {
     B:thinlogfence.5116=false
     B:thinlogfence.5117=false
     B:thinlogfence.5118=false
+    B:thinlogfence.5119=false
     B:thinlogfence.5184=false
     B:thinlogfence.5190=false
     B:thinlogfence.5194=false
@@ -6656,6 +6673,7 @@ gardentrees {
     B:thinlogfence.9212=false
     B:thinlogfence.9213=false
     B:thinlogfence.9214=false
+    B:thinlogfence.9215=false
     B:thinlogfence.9280=false
     B:thinlogfence.9286=false
     B:thinlogfence.9290=false
