--- a/config/Reika/RotaryCraft.cfg
+++ b/config/Reika/RotaryCraft.cfg
@@ -46,7 +46,7 @@
 
 "control setup" {
     B:"Allow Bedrock Breaker to Break Y=0"=false
-    B:"Allow Bedrock Pickaxe to Harvest Spawners"=true
+    B:"Allow Bedrock Pickaxe to Harvest Spawners"=false
     B:"Allow Blast Glass to be Used as TE Hardened Glass"=false
     B:"Allow Build Blocking of Some Machines"=false
     B:"Allow Craftable Bedrock"=true
