--- a/config/atg/biome_modifiers.cfg
+++ b/config/atg/biome_modifiers.cfg
@@ -882,6 +882,12 @@ BiomesOPlenty {
         D:OccuranceMultiplier=1.0
     }
 
+    "Maple Woods" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
 }
 
 
