--- a/config/bettersleeping.cfg
+++ b/config/bettersleeping.cfg
@@ -137,7 +137,7 @@ config {
 
 debuffs {
     # Enable this debuff [default: true]
-    B:blindness_enable=true
+    B:blindness_enable=false
 
     # At which level is this debuff applied [range: 1 ~ 23999, default: 800]
     I:blindness_level=800
@@ -155,7 +155,7 @@ debuffs {
     I:confusion_maxScale=1
 
     # Enable this debuff [default: true]
-    B:digSlowdown_enable=true
+    B:digSlowdown_enable=false
 
     # At which level is this debuff applied [range: 1 ~ 23999, default: 800]
     I:digSlowdown_level=800
@@ -173,7 +173,7 @@ debuffs {
     I:harm_maxScale=1
 
     # Enable this debuff [default: false]
-    B:hunger_enable=false
+    B:hunger_enable=true
 
     # At which level is this debuff applied [range: 1 ~ 23999, default: 800]
     I:hunger_level=800
@@ -182,7 +182,7 @@ debuffs {
     I:hunger_maxScale=1
 
     # Enable this debuff [default: true]
-    B:moveSlowdown_enable=true
+    B:moveSlowdown_enable=false
 
     # At which level is this debuff applied [range: 1 ~ 23999, default: 800]
     I:moveSlowdown_level=800
