--- a/config/forestry/backpacks.cfg
+++ b/config/forestry/backpacks.cfg
@@ -697,6 +697,24 @@ backpacks {
             stefinusguns:RPGAmmo
             stefinusguns:ScarHAmmo
             stefinusguns:Shotgunshell
+            flansmod:ak47Ammo
+            flansmod:barrettAmmo
+            flansmod:barrettExplosiveAmmo
+            flansmod:desertEagleAmmo
+            flansmod:fnscarAmmo
+            flansmod:glockAmmo
+            flansmod:m1014Ammo
+            flansmod:m16a4Ammo
+            flansmod:m249Ammo
+            flansmod:m60Ammo
+            flansmod:m72lawAmmo
+            flansmod:m9Ammo
+            flansmod:minigunAmmo
+            flansmod:minigunExplosiveAmmo
+            flansmod:mp5Ammo
+            flansmod:p90Ammo
+            flansmod:r870Ammo
+            flansmod:stingerAmmo
          >
 
         # Add ore dictionary names for the adventurer's backpack here in the format 'oreDictName'.
